--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "open-terminal",
+  "name": "@pablosz/open-terminal",
   "version": "0.1.11",
   "description": "cross platform open terminal and run command",
   "sideEffects": false,
@@ -58,7 +58,6 @@
     "execa": "^5.0.0",
     "fs-extra": "^9.1.0",
     "node-pstree": "^0.0.10",
-    "node-sigar": "^0.0.16",
     "ora": "^5.3.0",
     "uuid": "^8.3.2",
     "which": "^2.0.2"
